traces/bug_730.txt
examples++-load/iovtk.cpp:1261: error: DEAD_STORE
  The value written to &refedges (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:1261:19: Write of unused value
1259.     if( nargs[0] )  reftri = GetAny<long>((*nargs[0])(stack));
1260.     if( nargs[1] )  swap = GetAny< bool >((*nargs[1])(stack));
1261.     if( nargs[2] )  refedges = GetAny<long>((*nargs[2])(stack));
                          ^
1262.   
1263.     string *DataLabel;
